'增加了web客户端输入服务器命令执行与上传war、jar包并自动部署'